fixed radio button behavior & added spacing to quiz cards

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,6 +1,7 @@
 body {
+ padding: 3px 1px 10px 3px;
  font-family: "Cabin Sketch";
- background-color: #e99ec0;
+ background-color: #e283ae;
 }
 
 .answer-container {
@@ -31,6 +32,10 @@ body {
     align-items: center;
 }
 
+label {
+    cursor: pointer;
+}
+
 .answer-container span {
     font-family: "Cabin Sketch";
     font-size: 17px;
@@ -52,31 +57,39 @@ body {
 }
 
 .custom-navbar {
-    background-color: #43b0c2;
+    background-color: #56b8c8;
 }
 
 .custom-hover-btn:hover {
     font-family: "Cabin Sketch";
-    background-color: #43b0c2;
+    background-color: #e89f69;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
 }
 
 .quiz-card-1 {
     font-family: "Cabin Sketch";
+    font-size: 1.3rem;
     transition: background-color 0.3s ease, color 0.3s ease;
     cursor: pointer;
-    background-color: #fff8b8;
+    background-color: #fddf8d;
+    max-width: 500px;
+    height: 3.4rem;
+    margin: 0 auto;
+
 }
 
 .quiz-card-1:hover {
-    background-color: #43b0c2;
+    background-color: #e89f69;
     color: #ffffff;
 }
 
 .quiz-card {
     font-family: "Cabin Sketch";
-    background-color: #fff8b8;
+    background-color: #fddf8d;
+    padding: 30px;
+    max-width: 1000px;
+    margin: 0 auto;
 }
 
 .quiz-name {
@@ -86,4 +99,14 @@ body {
 .custom-btn {
     font-family: "Cabin Sketch";
     background-color: #876bd1;
+}
+
+.custom-label {
+    cursor: pointer;
+    padding: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.custom-label:hover {
+    color: #dd5790;
 }
